--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 					<div class="form-group text-center  name">FLAMEUI</div>
 					<div class="form-group px-5 text-center content"><p>Cùng chúng tôi tạo ra một thế giới mới theo trí tưởng tượng của bạn</p></div>
 					<div class="button">
-						<button type="button" onclick="alert('Tính năng đang cập nhật')" class="btn mt-5 mb-4 text-white mx-auto d-block start fs-4">BẮT ĐẦU</button>
-						<button type="button" onclick="alert('Tính năng đang cập nhật')" class="btn mx-auto d-block download  fs-4">DOWNLOAD SOURCE</button>
+						<button type="button" onclick="alert('Tính năng đang cập nhật')" class="btn mt-5 mb-4 text-white mx-auto d-block start ">BẮT ĐẦU</button>
+						<button type="button" onclick="alert('Tính năng đang cập nhật')" class="btn mx-auto d-block download  ">DOWNLOAD SOURCE</button>
 					</div>
 				</div>
 				<div class="col col-x bg-img me-2 shadow-sm" >
@@ -33,12 +33,12 @@
 			<div class="border2">
 				<div class="col col-design col-x shadow-sm">
 					<div class="form-group fw-bold text-center title" >CHÀO MỪNG ĐẾN VỚI</div>
-					<div class="form-group text-center  name ds-block">	
+					<div class="form-group text-center px-2  name ds-block">	
 						<img src="./img/logo.png" alt="" width="85px" style="padding-bottom:10px">FLAMEUI</div>
-					<div class="form-group px-5 text-center content"><p>Cùng chúng tôi tạo ra một thế giới mới theo trí tưởng tượng của bạn</p></div>
+					<div class="form-group px-5 text-center content pb-1"><p>Hãy để trí tưởng tượng của bạn được bay cao và xa hơn </p></div>
 					<div class="button">
-						<button type="button" onclick="alert('Tính năng đang cập nhật')" class="btn mt-5 mb-4 text-white mx-auto d-block start fs-4">BẮT ĐẦU</button>
-						<button type="button" onclick="alert('Tính năng đang cập nhật')" class="btn mx-auto d-block download  fs-4">DOWNLOAD SOURCE</button>
+						<button type="button" onclick="alert('Tính năng đang cập nhật')" class="btn mt-3 mb-4 text-white mx-auto d-block start fs-5">BẮT ĐẦU</button>
+						<button type="button" onclick="alert('Tính năng đang cập nhật')" class="btn mx-auto d-block download  fs-5">DOWNLOAD SOURCE</button>
 					</div>
 				</div>
 			</div>
